@@ -1,3 +1,9 @@
+2001-11-12  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* library/demos/radio.tcl: Added some code to both show off the
+	extra capabilities of the buttons and also show what can be done
+	with compound images on the sly.
+
 2001-11-10  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* unix/Makefile.in:
